# py_fastapi_ts

myapp/: README.md  main.py  pyproject.toml
