[project]
name = "myapp"
version = "0.1.0"
description = ""
authors = [
    {name = "JohnKenny",email = "squareindigojohn@yahoo.ie"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "pydantic (>=2.13.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "myapp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
